syntax = "proto3";
package unity_extensions;
option csharp_namespace = "GUIGUI17F.ProtobufManager";
option optimize_for = LITE_RUNTIME;

message ProtoPlayerPrefs {
  repeated string int_keys = 1;
  repeated int32 int_values = 2;
  repeated string float_keys = 3;
  repeated float float_values = 4;
  repeated string string_keys = 5;
  repeated string string_values = 6;
  repeated string bytes_keys = 7;
  repeated bytes bytes_values = 8;
}